# TerminalGameEngine

./: .gitignore  README.md
Engine/: AudioManager.cpp  CMakeLists.txt  Config.h  DebugManager.cpp  DebugPrinter.h  FakeCollider.h  GameObject.cpp  GameObject.h  Level.h  Particle.h  SimulationPrinter.h  Terminal.h  Vector2D.h  WorldSpace.cpp
EngineDemo/: CMakeLists.txt  GameLoop.cpp  GameLoop.h  build.sh  xbuild.sh  xrun
EngineDemo/Engine/: AudioManager.cpp  AudioManager.h  BaseTerminal.cpp  BaseTerminal.h  CMakeLists.txt  Collider.cpp  Collider.h  Config.h  DebugManager.cpp  DebugManager.h  DebugPrinter.cpp  DebugPrinter.h  DirectionUtils.h  Frame.cpp  Frame.h  GameObject.h  ISimulationEntity.h  InputUtils.h  Level.cpp  Level.h  LinuxTerminal.cpp  MovingStraightObject.cpp  MovingStraightObject.h  Particle.cpp  Particle.h  Printer.h  Simulation.cpp  Simulation.h  SimulationPrinter.cpp  SimulationPrinter.h  StringUtils.h  Terminal.h  TimeHelper.cpp  TimeHelper.h  UIPrinter.cpp  UIPrinter.h  WindowsTerminal.cpp  WindowsTerminal.h  WorldSpace.h
EngineDemo/Engine/Core/: Frame.cpp  Frame.h  Simulation.cpp  Simulation.h  WorldSpace.cpp  WorldSpace.h
EngineDemo/Engine/Debug/: DebugManager.cpp  DebugManager.h  DebugPrinter.cpp  DebugPrinter.h
EngineDemo/Engine/General/: Event.h  Vector2Int.h
EngineDemo/Engine/InputManager/: BaseInputManager.h  InputManager.h  LinuxInputManager.h  WindowsInputManager.h
EngineDemo/Engine/Managers/: AudioManager.h  DebugManager.cpp  DebugManager.h  TimeManager.cpp  TimeManager.h
EngineDemo/Engine/Printers/: DebugPrinter.cpp  DebugPrinter.h  Printer.h  SimulationPrinter.cpp  SimulationPrinter.h  UIPrinter.cpp  UIPrinter.h
EngineDemo/Engine/SimEntities/: Collider.cpp  Collider.h  FakeCollider.h  GameObject.cpp  GameObject.h  ISimulationEntity.h  Level.cpp  Level.h  MovingStraightObject.cpp  MovingStraightObject.h  Particle.cpp  Particle.h  StaticCollider.cpp  StaticCollider.h  VariableSizeCollider.h
EngineDemo/Engine/Terminal/: BaseTerminal.cpp  BaseTerminal.h  LinuxTerminal.cpp  LinuxTerminal.h  Terminal.h  WindowsTerminal.cpp  WindowsTerminal.h
EngineDemo/Engine/TerminalManager/: LinuxTerminal.cpp  LinuxTerminal.h  WindowsTerminal.cpp
EngineDemo/Engine/Utils/: RandomUtils.h  StringUtils.h
EngineDemo/Levels/Platformer/: AutomaticDoor.cpp  AutomaticDoor.h  Bunny.cpp  Bunny.h  CollisionsTestLevel.cpp  CollisionsTestLevel.h  EndlessRunnerLevel.cpp  EndlessRunnerLevel.h  LevelEndFlag.cpp  LevelEndFlag.h  Obstacle.cpp  Obstacle.h  ObstaclesSpawner.cpp  ObstaclesSpawner.h  PressurePlate.cpp  PressurePlate.h  PushableObject.h  PuzzleLevel.cpp  PuzzleLevel.h  SortingLayerTestLevel.cpp  SortingLayerTestLevel.h  SortingLayerTestObject.cpp  SortingLayerTestObject.h
EngineDemo/Levels/Pong/: PongBall.cpp  PongBall.h  PongBar.cpp  PongBar.h  PongLevel.cpp  PongLevel.h
EngineDemo/Levels/SpaceInvaders/: Alien.cpp  Alien.h  AlienHighScore.h  AlienLowScore.h  AlienMidScore.h  AliensController.cpp  AliensController.h  AliensFrontline.cpp  AliensFrontline.h  EnemmyProjectile.cpp  Enemy.cpp  Enemy.h  EnemyProjectile.h  PlayerProjectile.cpp  PlayerProjectile.h  PlayerTank.cpp  PlayerTank.h  Projectile.h  ShieldPart.cpp  ShieldPart.h  SpaceInvadersLevel.cpp  SpaceInvadersLevel.h  Ufo.cpp  Ufo.h  UfoSpawner.cpp  UfoSpawner.h
EngineUsageDemo/: CMakeLists.txt
EngineUsageDemo/Levels/Platformer/: CollisionsTestLevel.cpp  EndlessRunnerLevel.cpp  LevelEndFlag.h  PressurePlate.cpp
EngineUsageDemo/Levels/SpaceInvaders/: PlayerTank.h
TerminalGameEngine/: CMakeLists.txt  xbuild.sh
TerminalGameEngine/Engine/Core/: Frame.cpp  Simulation.h  WorldSpace.h
TerminalGameEngine/Engine/InputManager/: BaseInputManager.h  WindowsInputManager.h
TerminalGameEngine/Engine/Managers/: AudioManager.cpp  AudioManager.h  DebugManager.cpp  TimeManager.cpp
TerminalGameEngine/Engine/Printers/: DebugPrinter.cpp  Printer.h  SimulationPrinter.cpp  SimulationPrinter.h
TerminalGameEngine/Engine/SimEntities/: GameObject.h  ISimulationEntity.h  MovingStraightObject.cpp  MovingStraightObject.h  Particle.cpp  Particle.h  StaticCollider.cpp
TerminalGameEngine/Engine/Terminal/: LinuxTerminal.cpp  WindowsTerminal.h
TerminalGameEngine/Engine/Utils/: DirectionUtils.h  SmartPointersListUtils.h
terme/: CMakeLists.txt  conanfile.py  xbuild.sh
terme/terme/: Config.h
terme/terme/Core/: Frame.cpp  Frame.h  Simulation.cpp  Simulation.h  WorldSpace.cpp  WorldSpace.h
terme/terme/InputManager/: InputManager.h  LinuxInputManager.h  WindowsInputManager.h
terme/terme/Managers/: AudioManager.cpp  AudioManager.h  DebugManager.cpp  DebugManager.h  PersistenceManager.h  TimeManager.cpp  TimeManager.h
terme/terme/Printers/: DebugPrinter.cpp  DebugPrinter.h  Printer.h  SimulationPrinter.cpp  SimulationPrinter.h  UIPrinter.cpp  UIPrinter.h
terme/terme/SimEntities/: Collider.cpp  Collider.h  FakeCollider.h  GameObject.cpp  GameObject.h  ISimulationEntity.h  Level.cpp  Level.h  MovingStraightObject.cpp  MovingStraightObject.h  Particle.cpp  Particle.h  StaticCollider.cpp  StaticCollider.h  VariableSizeCollider.h
terme/terme/Terminal/: BaseTerminal.cpp  BaseTerminal.h  LinuxTerminal.cpp  LinuxTerminal.h  Terminal.h  WindowsTerminal.cpp  WindowsTerminal.h
terme/terme/Utils/: RandomUtils.h
terme/terme/core/: frame.cpp  frame.h  simulation.cpp  simulation.h  world_space.cpp  world_space.h
terme/terme/entities/: collider.cpp  collider.h  fake_collider.h  game_object.cpp  game_object.h  i_simulation_entity.h  level.cpp  level.h  moving_straight_object.cpp  moving_straight_object.h  particle.cpp  particle.h  static_collider.cpp  static_collider.h  variable_size_collider.h
terme/terme/general/: vector2_int.h
terme/terme/input_manager/: base_input_manager.h  input_manager.h  linux_input_manager.h  windows_input_manager.h
terme/terme/managers/: audio_manager.cpp  audio_manager.h  debug_manager.cpp  debug_manager.h  persistence_manager.h  time_manager.cpp  time_manager.h
terme/terme/printers/: debug_printer.cpp  debug_printer.h  printer.h  simulation_printer.cpp  simulation_printer.h  (+2 more)
(+55 files in other folders)
